log
Thu 09 May 2024 03:07:38 PM UTC: 
 tests:  1|8
total_score: 0/70
a133dde
Thu 09 May 2024 03:19:59 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
b2d6f1d
Thu 09 May 2024 03:23:05 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
2430d48
Thu 09 May 2024 03:31:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:13: error: too few arguments to function ‘is_equal’
   79 |         if (is_equal(key, aux->pair->key)) {
      |             ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
03a5aa4
Thu 09 May 2024 03:32:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6f7d85f
Thu 09 May 2024 04:00:58 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
c5f1aae
Thu 09 May 2024 04:11:30 PM UTC: 
 treemap.c | 32 ++++++++++++++++++++------------
 1 file changed, 20 insertions(+), 12 deletions(-)
 tests:  10|6
total_score: 15/70
18e98b6
Thu 09 May 2024 04:12:51 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|6
total_score: 15/70
706d0b5
